<resources>
    <string name="app_name">Grocery Shopping </string>
    <string name="splashtxt">WELCOME</string>
    <string name="login">Login</string>
    <string name="userHint">Username ?</string>
    <string name="pwdHint">Password ?</string>
    <string name="signinBtn">Sign In</string>
    <string name="des">Not Yet A Member?</string>
    <string name="register">Register</string>
    <string name="res">REGISTER</string>
    <string name="uname">Username</string>
    <string name="user"></string>
    <string name="pd">Password</string>
    <string name="pwd"></string>
    <string name="email">Email</string>
    <string name="eMail"></string>
    <string name="ades">Address</string>
    <string name="address"></string>
    <string name="ph">Phone Number</string>
    <string name="phNum"></string>
    <string name="signUp">Sign Up</string>
    <string name="payment">PAYMENT</string>
    <string name="cash">Cash</string>
    <string name="card">Credit/Debit</string>
    <string name="cname">Card Name</string>
    <string name="cNum">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="order">Order</string>
    <string name="delivery">DELIVERY</string>
    <string name="dAddress"></string>
    <string name="dPh"></string>
    <string name="delCharges">Delivery Charges: $3.45</string>
    <string name="tAmt">Total Amount</string>
    <string name="total"></string>
    <string name="payBtn">Pay Now</string>
    <string name="invite">Invite A Friend</string>
    <string name="description">Get 10% off on your next purchase</string>
    <string name="yEmail">Your Email</string>
    <string name="fEmail">Friend\'s Email</string>
    <string name="send">Send Now</string>
    <string name="profile">My Profile</string>
    <string name="PName"></string>
    <string name="Pemail"></string>
    <string name="Paddress"></string>
    <string name="PphNum"></string>
    <string name="odHistory">View Order History</string>
    <string name="odReport">View Order Reports</string>
    <string name="fruits">FRUITS</string>
    <string name="veg">VEGETABLES</string>
    <string name="dairy">DAIRY PRODUCTS</string>
    <string name="meat">MEAT</string>
    <string name="postal">Enter Postal Code</string>
    <string name="find">Find Nearby Stores</string>
    <string-array name="Select">Select Store
        <item>Select a store</item>
        <item>Wallmart</item>
        <item>Safeway</item>
        <item>Save On Foods</item>
        <item>Cosco</item>
    </string-array>
    <string name="storeName"></string>
    <string name="inviteBtn">Invite A Friend</string>
    <string name="fimg">fruitImages</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="blueberries">Blueberries</string>
    <string name="peach">Peach</string>
    <string name="pineapple">Pineapple</string>
    <string name="applePrice">$2/kg</string>
    <string name="bananaPrice">$1.50/kg</string>
    <string name="blueberriesPrice">$3</string>
    <string name="peachPrice">$2.50</string>
    <string name="pineapplePrice">$5.50</string>
    <string name="qty"></string>
    <string name="addBtn">ADD</string>
    <string name="Qty">Qty</string>
    <string name="milk">Milk</string>
    <string name="cheese">Cheese</string>
    <string name="yogurt">Yogurt</string>
    <string name="egg">Eggs</string>
    <string name="wipping">Wipping Cream</string>
    <string name="milkPice">$4.50</string>
    <string name="eggPrice">$3.59</string>
    <string name="cheesePrice">$2.50</string>
    <string name="yogurtPrice">$3.20</string>
    <string name="wippingPrice">$5.60</string>
    <string name="cartDes">View Cart</string>
    <string name="cart"></string>
    <string name="chicken">Chicken</string>
    <string name="pork">Pork</string>
    <string name="salmon">Salmon</string>
    <string name="bacon">Bacon</string>
    <string name="thigh">Chicken Thigh</string>
    <string name="chickenPice">$10</string>
    <string name="porkPrice">$7.80</string>
    <string name="salmonPrice">$6.50</string>
    <string name="baconPrice">$3.40</string>
    <string name="thighPrice">$15</string>
    <string name="bellpepper">Bell pepper</string>
    <string name="tomato">Tomatoes</string>
    <string name="zuchini">Zuchini</string>
    <string name="cucumber">Cucumber</string>
    <string name="broccoli">Broccoli</string>
    <string name="bellpepperPrice">$3/kg</string>
    <string name="tomatoPrice">$2.30/kg</string>
    <string name="zuchiniPrice">$5.70</string>
    <string name="cucumberPrice">$4.50/kg</string>
    <string name="broccoliPrice">$3.30/kg</string>
    <string name="pickup">PICKUP</string>
    <string name="proceed">Procced</string>
    <string name="back">Back</string>
    <string name="addToCart">ADD TO CART</string>
<string name="addDes">To finalize your order please CLICK -></string>
    <string name="orderHistory" />
    <string name="updateBtn">Update Data</string>
    <string name="logoutBtn">Logout</string>
</resources>
