<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgreg"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/regis"
        android:layout_width="165dp"
        android:layout_height="44dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/res"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uname"
        android:layout_width="93dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/uname"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regis" />

    <TextView
        android:id="@+id/emaildes"
        android:layout_width="66dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uname" />

    <TextView
        android:id="@+id/pwdDes"
        android:layout_width="97dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/pd"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emaildes" />

    <TextView
        android:id="@+id/ades"
        android:layout_width="88dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/ades"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdDes" />

    <TextView
        android:id="@+id/phDes"
        android:layout_width="93dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/ph"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ades" />

    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="84dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/uname"
        app:layout_constraintTop_toBottomOf="@+id/regis"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/email"
        android:layout_width="220dp"
        android:layout_height="49dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:hint="@string/eMail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/emaildes"
        app:layout_constraintTop_toBottomOf="@+id/user"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/pswrd"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/pwdDes"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/address"
        android:layout_width="225dp"
        android:layout_height="78dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toEndOf="@+id/ades"
        app:layout_constraintTop_toBottomOf="@+id/pswrd"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/phNum"
        android:layout_width="227dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:hint="@string/phNum"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/phDes"
        app:layout_constraintTop_toBottomOf="@+id/address"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/signUpbtn"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/signUp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phNum" />
</android.support.constraint.ConstraintLayout>