<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".PaymentActivity">

    <TextView
        android:id="@+id/payment"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="26dp"
        android:background="@color/themeBackground"
        android:gravity="center"
        android:text="@string/payment"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="161dp"
        android:layout_height="98dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="44dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment">

        <RadioButton
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cash"
            android:textSize="20sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/cName"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:hint="@string/cname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/cvv"
        android:layout_width="65dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:hint="@string/cvv"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cnum"
        tools:ignore="Autofill"/>


    <Button
        android:id="@+id/order"
        android:layout_width="105dp"
        android:layout_height="63dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/order"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvv" />

    <EditText
        android:id="@+id/Cnum"
        android:layout_width="216dp"
        android:layout_height="58dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:hint="@string/cNum"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cName"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginTop="40dp"
        android:text="@string/logoutBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order" />

</android.support.constraint.ConstraintLayout>