<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgdelivery"
    tools:context=".DeliveryActivity">

    <TextView
        android:id="@+id/delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:text="@string/delivery"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dAdd"
        android:layout_width="249dp"
        android:layout_height="50dp"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/dAddress"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery" />

    <Button
        android:id="@+id/payBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/payBtn"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dcharges" />

    <TextView
        android:id="@+id/dcharges"
        android:layout_width="247dp"
        android:layout_height="39dp"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/delCharges"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dPhone" />

    <TextView
        android:id="@+id/tdes"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/tAmt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dcharges" />

    <TextView
        android:id="@+id/toalCost"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/total"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tdes"
        app:layout_constraintTop_toBottomOf="@+id/dcharges" />

    <TextView
        android:id="@+id/dPhone"
        android:layout_width="247dp"
        android:layout_height="42dp"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/dPh"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dAdd" />
</android.support.constraint.ConstraintLayout>