<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewCartActivity">

    <TextView
        android:id="@+id/cartDes"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/cartDes"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="489dp"
        android:gravity="center"
        android:text="@string/cart"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartDes" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="208dp"
        android:layout_height="101dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart">

        <RadioButton
            android:id="@+id/deliveryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delivery" />

        <RadioButton
            android:id="@+id/pickupbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pickup" />
    </RadioGroup>

    <Button
        android:id="@+id/proccedbtn"
        android:layout_width="108dp"
        android:layout_height="58dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/proceed"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/cart" />
</android.support.constraint.ConstraintLayout>